--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ description: "Web Hosting"
         <p>- B2B website please click the link to purchase.</p>
     </div>
     <div style="width:20%;float:right">
-        <p><img src='https://github.com/jerrycruzmail/webhosting/assets/169523598/98281ef6-12ac-4f35-b7fa-e61bff08f5cd'></p>
+        <p><img width="90%" src='https://github.com/jerrycruzmail/webhosting/assets/169523598/98281ef6-12ac-4f35-b7fa-e61bff08f5cd'></p>
     </div>
 </div>
 
