--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@ description: "Web Hosting"
 <div style="width:100%">
     
     <div style="width:70%;float:left">
-        <h1><a href='https://www.siteground.com/index.htm?afcode=79b517d232c85700fb5ad504b03bcc33'>1.SiteGround</a></h1>
+        <h1>
+            <a target="_blank" style="text-decoration:underline;color:blue" href='https://www.siteground.com/index.htm?afcode=79b517d232c85700fb5ad504b03bcc33'>
+            1.SiteGround
+            </a>
+        </h1>
         <p>- B2B website please click the link to purchase.</p>
     </div>
     <div style="width:20%;float:right">
