--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ description: "Web Hosting"
     
     <div style="width:70%;float:left">
         <h1>
-            <a target="_blank" style="text-decoration:underline;color:blue" href='https://www.siteground.com/index.htm?afcode=79b517d232c85700fb5ad504b03bcc33'>
+            <a target="_blank" style="text-decoration:underline;" href='https://www.siteground.com/index.htm?afcode=79b517d232c85700fb5ad504b03bcc33'>
             1.SiteGround
             </a>
         </h1>
